antlr/PrismParser.py
# Generated from Prism.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PrismParser ( Parser ):

    grammarFileName = "Prism.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "'|'", "'='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'-'", "'+'", "'*'", "'/'", "'!'", "'mdp'", 
                     "'dtmc'", "'int'", "'bool'", "'double'", "'float'", 
                     "'['", "']'", "'('", "')'", "'->'", "';'", "':'", "'..'", 
                     "','", "'\"'", "'const'", "'module'", "'endmodule'", 
                     "'global'", "'min'", "'max'", "'''", "'true'", "'false'", 
                     "'init'", "'endinit'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "EQ", "NE", "LT", "LE", 
                      "GT", "GE", "MINUS", "PLUS", "TIMES", "DIV", "NOT", 
                      "MDP", "DTMC", "INT", "BOOL", "DOUBLE", "FLOAT", "LBRA", 
                      "RBRA", "LPAR", "RPAR", "TO", "SEMICOLON", "COLON", 
                      "RANGE", "COMMA", "DOUBLE_QUOTE", "CONST", "MODULE", 
                      "ENDMODULE", "GLOBAL", "MIN", "MAX", "PRIME", "TRUE", 
                      "FALSE", "INIT", "ENDINIT", "REWARDS", "FORMULA", 
                      "LABEL", "COMMENT", "WS", "ID", "NUMBER" ]

    RULE_expr = 0
    RULE_model_type = 1
    RULE_range = 2
    RULE_type = 3
    RULE_const_init = 4
    RULE_var_init = 5
    RULE_global_var = 6
    RULE_label = 7
    RULE_ordering = 8
    RULE_guard = 9
    RULE_var_update = 10
    RULE_state_update = 11
    RULE_state_update_distribution = 12
    RULE_guarded_command = 13
    RULE_module = 14
    RULE_preamble = 15
    RULE_init = 16
    RULE_file = 17

    ruleNames =  [ "expr", "model_type", "range", "type", "const_init", 
                   "var_init", "global_var", "label", "ordering", "guard", 
                   "var_update", "state_update", "state_update_distribution", 
                   "guarded_command", "module", "preamble", "init", "file" ]

    EOF = Token.EOF
    AND=1
    OR=2
    EQ=3
    NE=4
    LT=5
    LE=6
    GT=7
    GE=8
    MINUS=9
    PLUS=10
    TIMES=11
    DIV=12
    NOT=13
    MDP=14
    DTMC=15
    INT=16
    BOOL=17
    DOUBLE=18
    FLOAT=19
    LBRA=20
    RBRA=21
    LPAR=22
    RPAR=23
    TO=24
    SEMICOLON=25
    COLON=26
    RANGE=27
    COMMA=28
    DOUBLE_QUOTE=29
    CONST=30
    MODULE=31
    ENDMODULE=32
    GLOBAL=33
    MIN=34
    MAX=35
    PRIME=36
    TRUE=37
    FALSE=38
    INIT=39
    ENDINIT=40
    REWARDS=41
    FORMULA=42
    LABEL=43
    COMMENT=44
    WS=45
    ID=46
    NUMBER=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrismParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Expr_negContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(PrismParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(PrismParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_neg" ):
                listener.enterExpr_neg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_neg" ):
                listener.exitExpr_neg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_neg" ):
                return visitor.visitExpr_neg(self)
            else:
                return visitor.visitChildren(self)


    class Expr_subContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)

        def MINUS(self):
            return self.getToken(PrismParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_sub" ):
                listener.enterExpr_sub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_sub" ):
                listener.exitExpr_sub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_sub" ):
                return visitor.visitExpr_sub(self)
            else:
                return visitor.visitChildren(self)


    class Expr_parContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAR(self):
            return self.getToken(PrismParser.LPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(PrismParser.ExprContext,0)

        def RPAR(self):
            return self.getToken(PrismParser.RPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_par" ):
                listener.enterExpr_par(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_par" ):
                listener.exitExpr_par(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_par" ):
                return visitor.visitExpr_par(self)
            else:
                return visitor.visitChildren(self)


    class Expr_divContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)

        def DIV(self):
            return self.getToken(PrismParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_div" ):
                listener.enterExpr_div(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_div" ):
                listener.exitExpr_div(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_div" ):
                return visitor.visitExpr_div(self)
            else:
                return visitor.visitChildren(self)


    class Expr_addContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(PrismParser.PLUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_add" ):
                listener.enterExpr_add(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_add" ):
                listener.exitExpr_add(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_add" ):
                return visitor.visitExpr_add(self)
            else:
                return visitor.visitChildren(self)


    class Expr_numContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(PrismParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_num" ):
                listener.enterExpr_num(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_num" ):
                listener.exitExpr_num(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_num" ):
                return visitor.visitExpr_num(self)
            else:
                return visitor.visitChildren(self)


    class Expr_varContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PrismParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_var" ):
                listener.enterExpr_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_var" ):
                listener.exitExpr_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_var" ):
                return visitor.visitExpr_var(self)
            else:
                return visitor.visitChildren(self)


    class Expr_minContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MIN(self):
            return self.getToken(PrismParser.MIN, 0)
        def LPAR(self):
            return self.getToken(PrismParser.LPAR, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)

        def COMMA(self):
            return self.getToken(PrismParser.COMMA, 0)
        def RPAR(self):
            return self.getToken(PrismParser.RPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_min" ):
                listener.enterExpr_min(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_min" ):
                listener.exitExpr_min(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_min" ):
                return visitor.visitExpr_min(self)
            else:
                return visitor.visitChildren(self)


    class Expr_maxContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MAX(self):
            return self.getToken(PrismParser.MAX, 0)
        def LPAR(self):
            return self.getToken(PrismParser.LPAR, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)

        def COMMA(self):
            return self.getToken(PrismParser.COMMA, 0)
        def RPAR(self):
            return self.getToken(PrismParser.RPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_max" ):
                listener.enterExpr_max(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_max" ):
                listener.exitExpr_max(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_max" ):
                return visitor.visitExpr_max(self)
            else:
                return visitor.visitChildren(self)


    class Expr_mulContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)

        def TIMES(self):
            return self.getToken(PrismParser.TIMES, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_mul" ):
                listener.enterExpr_mul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_mul" ):
                listener.exitExpr_mul(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_mul" ):
                return visitor.visitExpr_mul(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PrismParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                localctx = PrismParser.Expr_minContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 37
                self.match(PrismParser.MIN)
                self.state = 38
                self.match(PrismParser.LPAR)
                self.state = 39
                self.expr(0)
                self.state = 40
                self.match(PrismParser.COMMA)
                self.state = 41
                self.expr(0)
                self.state = 42
                self.match(PrismParser.RPAR)
                pass
            elif token in [35]:
                localctx = PrismParser.Expr_maxContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 44
                self.match(PrismParser.MAX)
                self.state = 45
                self.match(PrismParser.LPAR)
                self.state = 46
                self.expr(0)
                self.state = 47
                self.match(PrismParser.COMMA)
                self.state = 48
                self.expr(0)
                self.state = 49
                self.match(PrismParser.RPAR)
                pass
            elif token in [22]:
                localctx = PrismParser.Expr_parContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.match(PrismParser.LPAR)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(PrismParser.RPAR)
                pass
            elif token in [9]:
                localctx = PrismParser.Expr_negContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.match(PrismParser.MINUS)
                self.state = 56
                self.expr(3)
                pass
            elif token in [46]:
                localctx = PrismParser.Expr_varContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(PrismParser.ID)
                pass
            elif token in [47]:
                localctx = PrismParser.Expr_numContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.match(PrismParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 73
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = PrismParser.Expr_mulContext(self, PrismParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 61
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 62
                        self.match(PrismParser.TIMES)
                        self.state = 63
                        self.expr(9)
                        pass

                    elif la_ == 2:
                        localctx = PrismParser.Expr_divContext(self, PrismParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 64
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 65
                        self.match(PrismParser.DIV)
                        self.state = 66
                        self.expr(8)
                        pass

                    elif la_ == 3:
                        localctx = PrismParser.Expr_addContext(self, PrismParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 67
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 68
                        self.match(PrismParser.PLUS)
                        self.state = 69
                        self.expr(7)
                        pass

                    elif la_ == 4:
                        localctx = PrismParser.Expr_subContext(self, PrismParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 70
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 71
                        self.match(PrismParser.MINUS)
                        self.state = 72
                        self.expr(6)
                        pass

             
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Model_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrismParser.RULE_model_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MdpContext(Model_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.Model_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MDP(self):
            return self.getToken(PrismParser.MDP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMdp" ):
                listener.enterMdp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMdp" ):
                listener.exitMdp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMdp" ):
                return visitor.visitMdp(self)
            else:
                return visitor.visitChildren(self)


    class DtmcContext(Model_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.Model_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DTMC(self):
            return self.getToken(PrismParser.DTMC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDtmc" ):
                listener.enterDtmc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDtmc" ):
                listener.exitDtmc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDtmc" ):
                return visitor.visitDtmc(self)
            else:
                return visitor.visitChildren(self)



    def model_type(self):

        localctx = PrismParser.Model_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_model_type)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                localctx = PrismParser.MdpContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(PrismParser.MDP)
                pass
            elif token in [15]:
                localctx = PrismParser.DtmcContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(PrismParser.DTMC)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRA(self):
            return self.getToken(PrismParser.LBRA, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismParser.ExprContext)
            else:
                return self.getTypedRuleContext(PrismParser.ExprContext,i)


        def RANGE(self):
            return self.getToken(PrismParser.RANGE, 0)

        def RBRA(self):
            return self.getToken(PrismParser.RBRA, 0)

        def getRuleIndex(self):
            return PrismParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRange" ):
                return visitor.visitRange(self)
            else:
                return visitor.visitChildren(self)




    def range_(self):

        localctx = PrismParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PrismParser.LBRA)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(PrismParser.RANGE)
            self.state = 85
            self.expr(0)
            self.state = 86
            self.match(PrismParser.RBRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrismParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class T_rangeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def range_(self):
            return self.getTypedRuleContext(PrismParser.RangeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_range" ):
                listener.enterT_range(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_range" ):
                listener.exitT_range(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_range" ):
                return visitor.visitT_range(self)
            else:
                return visitor.visitChildren(self)


    class T_doubleContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DOUBLE(self):
            return self.getToken(PrismParser.DOUBLE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_double" ):
                listener.enterT_double(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_double" ):
                listener.exitT_double(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_double" ):
                return visitor.visitT_double(self)
            else:
                return visitor.visitChildren(self)


    class T_intContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(PrismParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_int" ):
                listener.enterT_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_int" ):
                listener.exitT_int(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_int" ):
                return visitor.visitT_int(self)
            else:
                return visitor.visitChildren(self)


    class T_floatContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(PrismParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_float" ):
                listener.enterT_float(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_float" ):
                listener.exitT_float(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_float" ):
                return visitor.visitT_float(self)
            else:
                return visitor.visitChildren(self)


    class T_boolContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(PrismParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_bool" ):
                listener.enterT_bool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_bool" ):
                listener.exitT_bool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_bool" ):
                return visitor.visitT_bool(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = PrismParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                localctx = PrismParser.T_intContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(PrismParser.INT)
                pass
            elif token in [18]:
                localctx = PrismParser.T_doubleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(PrismParser.DOUBLE)
                pass
            elif token in [19]:
                localctx = PrismParser.T_floatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(PrismParser.FLOAT)
                pass
            elif token in [17]:
                localctx = PrismParser.T_boolContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.match(PrismParser.BOOL)
                pass
            elif token in [20]:
                localctx = PrismParser.T_rangeContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.range_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrismParser.RULE_const_init

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Const_init_exprContext(Const_initContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.Const_initContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(PrismParser.CONST, 0)
        def type_(self):
            return self.getTypedRuleContext(PrismParser.TypeContext,0)

        def ID(self):
            return self.getToken(PrismParser.ID, 0)
        def EQ(self):
            return self.getToken(PrismParser.EQ, 0)
        def expr(self):
            return self.getTypedRuleContext(PrismParser.ExprContext,0)

        def SEMICOLON(self):
            return self.getToken(PrismParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_init_expr" ):
                listener.enterConst_init_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_init_expr" ):
                listener.exitConst_init_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_init_expr" ):
                return visitor.visitConst_init_expr(self)
            else:
                return visitor.visitChildren(self)


    class Const_init_typeContext(Const_initContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrismParser.Const_initContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(PrismParser.CONST, 0)
        def type_(self):
            return self.getTypedRuleContext(PrismParser.TypeContext,0)

        def ID(self):
            return self.getToken(PrismParser.ID, 0)
        def SEMICOLON(self):
            return self.getToken(PrismParser.SEMICOLON, 0)
